--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 
           <li class="nav-item"><a class="nav-link " href="#">Menu</a></li>
-          <li class="nav-item"><a class="nav-link " href="#">Pictures</a></li>
+          <li class="nav-item"><a class="nav-link " href="https://borisbecode.github.io/restaurant/pictures.html">Pictures</a></li>
           <li class="nav-item"><a class="nav-link " href="#">Restaurant</a></li>
           <li class="nav-item"><a class="nav-link " href="#">Contact</a></li>
         </ul>
