--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>Home</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -39,7 +39,8 @@
 
 
           <li class="nav-item"><a class="nav-link " href="#">Menu</a></li>
-          <li class="nav-item"><a class="nav-link " href="https://borisbecode.github.io/restaurant/pictures.html">Pictures</a></li>
+          <li class="nav-item"><a class="nav-link "
+              href="https://borisbecode.github.io/restaurant/pictures.html">Pictures</a></li>
           <li class="nav-item"><a class="nav-link " href="#">Restaurant</a></li>
           <li class="nav-item"><a class="nav-link " href="#">Contact</a></li>
         </ul>
@@ -70,7 +71,7 @@
 
       <div class="col-sm-4 order-sm-1">
 
-        <div class="panel panel-default  border rounded-3 " style="background-color: rgba(241, 236, 236, 0.918);">
+        <div class="panel panel-default  border rounded-3 mt-5 " style="background-color: rgba(241, 236, 236, 0.918);">
 
 
 
@@ -81,12 +82,7 @@
         </div>
 
 
-        <div class="panel panel-default bg-light border rounded-3 mt-4 mb-4">
-          <h1>Nos ingrédients</h1>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus blanditiis repellendus neque possimus
-            corrupti, nesciunt voluptatem deleniti earum veritatis sit, delectus mollitia numquam veniam sint atque,
-            laborum voluptas! Quam, deleniti.</p>
-        </div>
+
       </div>
 
 
@@ -95,7 +91,12 @@
 
       <div class="col-sm-4 order-sm-2">
 
-
+        <div class="panel panel-default  border rounded-3 mt-5 " style="background-color: rgba(241, 236, 236, 0.918);">
+          <h1>Nos ingrédients</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus blanditiis repellendus neque possimus
+            corrupti, nesciunt voluptatem deleniti earum veritatis sit, delectus mollitia numquam veniam sint atque,
+            laborum voluptas! Quam, deleniti.</p>
+        </div>
 
 
       </div>
@@ -105,7 +106,7 @@
 
 
       <div class="col-sm-4 order-sm-3">
-        <div class="panel panel-default bg-light border rounded-3 ">
+        <div class="panel panel-default  border rounded-3 mt-5" style="background-color: rgba(241, 236, 236, 0.918);">
           <h1>Nos spécialités</h1>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo commodi perspiciatis ducimus. Id
             dolores
@@ -117,28 +118,6 @@
       </div>
 
 
-      <div class="container-fluid text-center justify-content-center order-sm-4 mt-5">
-        <!-- <h1 id="titre">Ce qu'ils pensent de nous:</h1> -->
-
-        <div class="row">
-          <div class="col-sm-6">
-            <div class="card">
-              <div id="google" class="card-body p-5">
-
-                <a href="#" class="btn btn-primary">Avis Google</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6">
-            <div class="card">
-              <div id="trip" class="card-body p-5 ">
-
-                <a href="#" class="btn btn-primary">Avis Tripadvisor</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
 
 
 
@@ -147,8 +126,8 @@
 
 
       <!-- Jumbotron en boostrap 5  -->
-      <div class="col-12 mt-5 order-sm-5">
-        <div id="jumbo" class="h-100 p-5  border rounded-3 ">
+      <div class="col-12 mt-5 order-sm-3">
+        <div id="jumbo" class="h-100 p-5  border rounded-3 mt-5 " style="background-color: rgba(241, 236, 236, 0.918);">
           <h2>Venez découvrir l'authenticité :</h2>
           <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to
             look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's
@@ -157,6 +136,28 @@
         </div>
       </div>
 
+      <div class="container-fluid text-center justify-content-center order-sm-4 mt-5">
+
+
+        <div class="row mt-5">
+          <div class="col-sm-6 order-sm-6">
+            <div class="card">
+              <div id="google" class="card-body p-5">
+
+                <a href="#" class="btn btn-primary">Avis Google</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-6 order-sm-7">
+            <div class="card">
+              <div id="trip" class="card-body p-5">
+
+                <a href="#" class="btn btn-primary">Avis Tripadvisor</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
 
 
