--- a/menu.html
+++ b/menu.html
@@ -38,8 +38,9 @@
             <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto text-center">
 
-
-                    <li class="nav-item"><a class="nav-link " href="#">Menu</a></li>
+                    <li class="nav-item"><a class="nav-link " href="https://borisbecode.github.io/restaurant/">Home</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link " href="https://borisbecode.github.io/restaurant/menu">Menu</a></li>
                     <li class="nav-item"><a class="nav-link "
                             href="https://borisbecode.github.io/restaurant/pictures.html">Pictures</a></li>
                     <li class="nav-item"><a class="nav-link " href="#">Restaurant</a></li>
@@ -211,7 +212,9 @@
                 <li class="list-group-item d-flex justify-content-between align-items-start">
                     <div class="ms-2 me-auto">
                         <div class="fw-bold">UIJIN Beer</div>
-                        <img src="https://zupimages.net/up/21/40/s425.jpg" alt=""> The slight bitter flavor and attractive aroma of hops make Uijin Beer outstanding in its class. Its fresh and fruity aroma has a dominant note of muscat.
+                        <img src="https://zupimages.net/up/21/40/s425.jpg" alt=""> The slight bitter flavor and
+                        attractive aroma of hops make Uijin Beer outstanding in its class. Its fresh and fruity aroma
+                        has a dominant note of muscat.
                     </div>
                     <span id="prix" class="badge bg-primary rounded-pill">4€</span>
                 </li>
