--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto text-center">
 
-
-          <li class="nav-item"><a class="nav-link " href="#">Menu</a></li>
+          <li class="nav-item"><a class="nav-link " href="https://borisbecode.github.io/restaurant/">Home</a></li>
+          <li class="nav-item"><a class="nav-link " href="https://borisbecode.github.io/restaurant/menu">Menu</a></li>
           <li class="nav-item"><a class="nav-link "
               href="https://borisbecode.github.io/restaurant/pictures.html">Pictures</a></li>
           <li class="nav-item"><a class="nav-link " href="#">Restaurant</a></li>
