--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
             <a href="#" class="ico" title="Facebook"><i class="fa fa-facebook"></i></a>
             <a href="#" class="ico" title="Linkedin"><i class="fa fa-instagram"></i></a> -->
 
+            <p>2021 Copyright : Bisbecode</p>
 
       </div>
 
@@ -246,17 +247,7 @@
 
 
 
-    <div class="container-fluid text-center mt-1" style="background-color: rgba(0, 0, 0, 0.2);">
-
-
-
-
-
-
-
-      2021 Copyright :
-      <a class="text-dark" href="https://borisbecode.github.io/">Bis Becode</a>
-    </div>
+    
 
 
 
