--- a/menu.html
+++ b/menu.html
@@ -24,7 +24,7 @@
     <nav id="navbar" class="navbar navbar-expand-md navbar-dark " style="background-color: rgba(128, 128, 128, 0.384);">
         <div class="container-fluid">
 
-            <a id="logo" class="navbar-brand expand-sm" href="#">
+            <a id="logo" class="navbar-brand expand-sm" href="https://borisbecode.github.io/restaurant/">
                 <img src="https://zupimages.net/up/21/40/e9w9.png" alt="Avatar Logo" style="width:40px;"
                     class="rounded-pill">
             </a>
@@ -276,6 +276,9 @@
                     Email: <a href="mailto:shibuyaramen@gmail.com">Shibuyaramen@gmail.com</a>
 
                 </p>
+                     <!-- <p><strong>Nos Réseaux:</strong></p>
+            <a href="#" class="ico" title="Facebook"><i class="fa fa-facebook"></i></a>
+            <a href="#" class="ico" title="Linkedin"><i class="fa fa-instagram"></i></a> -->
 
 
             </div>
@@ -315,7 +318,7 @@
                     0497 067 226
                 </p>
                 <p><strong>Via notre form:</strong> <br>
-                    <button class="btn btn-outline-secondary" type="button">Contact</button>
+                    <button id="button" class="btn btn-outline-secondary" type="button">Contact</button>
                 </p>
                 <!-- <p><strong>Nos Réseaux:</strong></p>
             <a href="#" class="ico" title="Facebook"><i class="fa fa-facebook"></i></a>
