--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <nav id="navbar" class="navbar navbar-expand-md navbar-dark " style="background-color: rgba(128, 128, 128, 0.384);">
     <div class="container-fluid">
 
-      <a id="logo" class="navbar-brand expand-sm" href="#">
+      <a id="logo" class="navbar-brand expand-sm" href="https://borisbecode.github.io/restaurant/">
         <img src="https://zupimages.net/up/21/40/e9w9.png" alt="Avatar Logo" style="width:40px;" class="rounded-pill">
       </a>
 
@@ -184,6 +184,7 @@
           Email: <a href="mailto:shibuyaramen@gmail.com">Shibuyaramen@gmail.com</a>
 
         </p>
+        
 
 
       </div>
@@ -222,8 +223,8 @@
         <p><strong>Par téléphone : </strong> <br>
           0497 067 226
         </p>
-        <p><strong>Via notre form:</strong> <br>
-          <button class="btn btn-outline-secondary" type="button">Contact</button>
+        <p><strong>Via notre formulaire:</strong> <br>
+          <button id="button" class="btn btn-outline-secondary" type="button">Contact</button>
         </p>
         <!-- <p><strong>Nos Réseaux:</strong></p>
             <a href="#" class="ico" title="Facebook"><i class="fa fa-facebook"></i></a>
