--- a/pagination2.html
+++ b/pagination2.html
@@ -18,7 +18,7 @@
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" />
 
-    <title>Pictures</title>
+    <title>Pagination</title>
     <link rel="stylesheet" href="pagination2.css">
 
 </head>
@@ -83,13 +83,10 @@
 
                 <div id="cards">
                     <div class="card bg-danger mb-3 border-info rounded-3" >
-                        <img src="https://zupimages.net/up/21/40/tujm.jpg" class="card-img-top" alt="">
+                        <img src="https://zupimages.net/up/21/40/159s.jpg" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Burger BBQ</h5>
-                            <p class="card-text">Burger BBQ avec du pur
-                                angus, bacon, cheddar, salade, tomates, oignons
-                                rouges avec une
-                                sauce BBQ</p>
+                            <h5 class="card-title">Au comptoir</h5>
+                            <p class="card-text">Vivez l'experience authentique japonaise</p>
                         </div>
                     </div>
                 </div>
@@ -98,13 +95,10 @@
 
                 <div id="cards">
                     <div class="card bg-danger mb-3 border-info rounded-3" >
-                        <img src="https://zupimages.net/up/21/40/tujm.jpg" class="card-img-top" alt="">
+                        <img src="https://zupimages.net/up/21/40/6jre.jpg" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Burger BBQ</h5>
-                            <p class="card-text">Burger BBQ avec du pur
-                                angus, bacon, cheddar, salade, tomates, oignons
-                                rouges avec une
-                                sauce BBQ</p>
+                            <h5 class="card-title">Ramen</h5>
+                            <p class="card-text">Ramen Végétarien</p>
                         </div>
                     </div>
                 </div>
@@ -114,13 +108,10 @@
 
                 <div id="cards">
                     <div class="card  bg-danger mb-3 border-info rounded-3" >
-                        <img src="https://zupimages.net/up/21/40/tujm.jpg" class="card-img-top" alt="">
+                        <img src="https://zupimages.net/up/21/40/bg23.jpg" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Burger BBQ</h5>
-                            <p class="card-text">Burger BBQ avec du pur
-                                angus, bacon, cheddar, salade, tomates, oignons
-                                rouges avec une
-                                sauce BBQ</p>
+                            <h5 class="card-title">Ramen</h5>
+                            <p class="card-text">Ramen Poulet</p>
                         </div>
                     </div>
                 </div>
@@ -156,6 +147,7 @@
                         
 
                         <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="#">4</a></li>
                         <li class="page-item">
                             <a class="page-link" href="#">Next</a>
                         </li>
