--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <li class="nav-item"><a class="nav-link " href="https://borisbecode.github.io/restaurant/">Home</a></li>
           <li class="nav-item"><a class="nav-link " href="https://borisbecode.github.io/restaurant/menu">Menu</a></li>
           <li class="nav-item"><a class="nav-link "
-              href="https://borisbecode.github.io/restaurant/pictures.html">Pictures</a></li>
+              href="https://borisbecode.github.io/restaurant/pagination.html">Pictures</a></li>
           <li class="nav-item"><a class="nav-link " href="#">Restaurant</a></li>
           <li class="nav-item"><a class="nav-link " href="#">Contact</a></li>
         </ul>
