--- a/pagination3.html
+++ b/pagination3.html
@@ -18,7 +18,7 @@
         integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
         crossorigin="anonymous" />
 
-    <title>Pictures</title>
+    <title>Pagination</title>
     <link rel="stylesheet" href="pagination2.css">
 
 </head>
@@ -83,13 +83,10 @@
 
                 <div id="cards">
                     <div class="card bg-danger mb-3 border-info rounded-3" >
-                        <img src="https://zupimages.net/up/21/40/tujm.jpg" class="card-img-top" alt="">
+                        <img src="https://zupimages.net/up/21/40/ij0d.jpg" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Burger BBQ</h5>
-                            <p class="card-text">Burger BBQ avec du pur
-                                angus, bacon, cheddar, salade, tomates, oignons
-                                rouges avec une
-                                sauce BBQ</p>
+                            <h5 class="card-title">La cuisine</h5>
+                            <p class="card-text">Avec notre chef à l'oeuvre</p>
                         </div>
                     </div>
                 </div>
@@ -98,13 +95,10 @@
 
                 <div id="cards">
                     <div class="card bg-danger mb-3 border-info rounded-3" >
-                        <img src="https://zupimages.net/up/21/40/tujm.jpg" class="card-img-top" alt="">
+                        <img src="https://zupimages.net/up/21/40/p4cu.jpg" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Burger BBQ</h5>
-                            <p class="card-text">Burger BBQ avec du pur
-                                angus, bacon, cheddar, salade, tomates, oignons
-                                rouges avec une
-                                sauce BBQ</p>
+                            <h5 class="card-title">Ramen</h5>
+                            <p class="card-text">Ramen Scampi</p>
                         </div>
                     </div>
                 </div>
@@ -114,13 +108,10 @@
 
                 <div id="cards">
                     <div class="card  bg-danger mb-3 border-info rounded-3" >
-                        <img src="https://zupimages.net/up/21/40/tujm.jpg" class="card-img-top" alt="">
+                        <img src="https://zupimages.net/up/21/40/2q34.jpg" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title">Burger BBQ</h5>
-                            <p class="card-text">Burger BBQ avec du pur
-                                angus, bacon, cheddar, salade, tomates, oignons
-                                rouges avec une
-                                sauce BBQ</p>
+                            <h5 class="card-title">Nos Guyoza</h5>
+                            <p class="card-text">Ils sont fait main , chaque matin </p>
                         </div>
                     </div>
                 </div>
@@ -157,6 +148,7 @@
                         
                         <li class="page-item active">
                             <a class="page-link" href="#">3 <span class="sr-only">Active Page</span></a></li>
+                        <li class="page-item"><a class="page-link" href="#">4</a></li>
 
 
                         <li class="page-item">
