--- a/pagination.html
+++ b/pagination.html
@@ -138,17 +138,17 @@
                         </li>
 
                         <li class="page-item active">
-                            <a class="page-link" href="#">1 <span class="sr-only">Active Page</span></a></li>
+                            <a class="page-link" href="https://borisbecode.github.io/restaurant/pagination.html">1 <span class="sr-only">Active Page</span></a></li>
 
-                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                        <li class="page-item"><a class="page-link" href="https://borisbecode.github.io/restaurant/pagination2.html">2</a></li>
 
                         
 
-                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                        <li class="page-item"><a class="page-link" href="https://borisbecode.github.io/restaurant/pagination3.html">3</a></li>
 
-                        <li class="page-item"><a class="page-link" href="#">4</a></li>
+                        <li class="page-item"><a class="page-link" href="https://borisbecode.github.io/restaurant/pagination4.html">4</a></li>
                         <li class="page-item">
-                            <a class="page-link" href="#">Next</a>
+                            <a class="page-link" href="https://borisbecode.github.io/restaurant/pagination2.html">Next</a>
                         </li>
                     </ul>
                 </nav>
