--- a/pagination.html
+++ b/pagination.html
@@ -82,7 +82,7 @@
             <div class="col-sm-4">
 
                 <div id="cards">
-                    <div class="card bg-danger mb-3 border-info rounded-3" >
+                    <div class="card bg-danger mb-3 border-light rounded-3" >
                         <img src="https://zupimages.net/up/21/40/tujm.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Authenticité</h5>
@@ -94,7 +94,7 @@
             <div class="col-sm-4">
 
                 <div id="cards">
-                    <div class="card bg-danger mb-3 border-info rounded-3" >
+                    <div class="card bg-danger mb-3 border-light rounded-3" >
                         <img src="https://zupimages.net/up/21/40/k2bh.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">La Cuisine</h5>
@@ -107,7 +107,7 @@
             <div class="col-sm-4">
 
                 <div id="cards">
-                    <div class="card  bg-danger mb-3 border-info rounded-3" >
+                    <div class="card  bg-danger mb-3 border-light rounded-3" >
                         <img src="https://zupimages.net/up/21/40/235s.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Ramen</h5>
