--- a/pagination3.html
+++ b/pagination3.html
@@ -82,7 +82,7 @@
             <div class="col-sm-4">
 
                 <div id="cards">
-                    <div class="card bg-danger mb-3 border-info rounded-3" >
+                    <div class="card bg-danger mb-3 border-light rounded-3" >
                         <img src="https://zupimages.net/up/21/40/ij0d.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">La cuisine</h5>
@@ -94,7 +94,7 @@
             <div class="col-sm-4">
 
                 <div id="cards">
-                    <div class="card bg-danger mb-3 border-info rounded-3" >
+                    <div class="card bg-danger mb-3 border-light rounded-3" >
                         <img src="https://zupimages.net/up/21/40/p4cu.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Ramen</h5>
@@ -107,7 +107,7 @@
             <div class="col-sm-4">
 
                 <div id="cards">
-                    <div class="card  bg-danger mb-3 border-info rounded-3" >
+                    <div class="card  bg-danger mb-3 border-light rounded-3" >
                         <img src="https://zupimages.net/up/21/40/2q34.jpg" class="card-img-top" alt="">
                         <div class="card-body">
                             <h5 class="card-title">Nos Guyoza</h5>
