--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <li class="nav-item"><a class="nav-link " href="https://borisbecode.github.io/restaurant/menu">Menu</a></li>
           <li class="nav-item"><a class="nav-link "
               href="https://borisbecode.github.io/restaurant/pagination.html">Pictures</a></li>
-          <li class="nav-item"><a class="nav-link " href="#">Restaurant</a></li>
+          <li class="nav-item"><a class="nav-link " href="https://borisbecode.github.io/restaurant/restaurant.html">Restaurant</a></li>
           <li class="nav-item"><a class="nav-link " href="#">Contact</a></li>
         </ul>
 
