--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li class="nav-item"><a class="nav-link "
               href="https://borisbecode.github.io/restaurant/pagination.html">Pictures</a></li>
           <li class="nav-item"><a class="nav-link " href="https://borisbecode.github.io/restaurant/restaurant.html">Restaurant</a></li>
-          <li class="nav-item"><a class="nav-link " href="#">Contact</a></li>
+          <li class="nav-item"><a class="nav-link " href="https://borisbecode.github.io/restaurant/contact.html">Contact</a></li>
         </ul>
 
       </div>
@@ -175,8 +175,8 @@
       <div class="col-sm-4 order-sm-5 mb-1">
 
         <h2>Contactez-nous</h2>
-        <p>Route de la joie , n°69 <br>
-          1000 - Brussels
+        <p>Rue du Bonheur , n°69 <br>
+          1070 - Anderlecht
 
 
         </p>
@@ -224,7 +224,7 @@
           0497 067 226
         </p>
         <p><strong>Via notre formulaire:</strong> <br>
-          <button id="button" class="btn btn-outline-secondary" type="button">Contact</button>
+          <button id="button" class="btn btn-outline-secondary" href="https://borisbecode.github.io/restaurant/contact.html" type="button">Contact</button>
         </p>
         <!-- <p><strong>Nos Réseaux:</strong></p>
             <a href="#" class="ico" title="Facebook"><i class="fa fa-facebook"></i></a>
