--- a/menu.html
+++ b/menu.html
@@ -44,7 +44,7 @@
                     <li class="nav-item"><a class="nav-link "
                             href="https://borisbecode.github.io/restaurant/pagination.html">Pictures</a></li>
                     <li class="nav-item"><a class="nav-link " href="https://borisbecode.github.io/restaurant/restaurant.html">Restaurant</a></li>
-                    <li class="nav-item"><a class="nav-link " href="#">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link " href="https://borisbecode.github.io/restaurant/contact.html">Contact</a></li>
                 </ul>
 
             </div>
@@ -267,11 +267,11 @@
             <div class="col-sm-4 order-sm-5 mb-1">
 
                 <h2>Contactez-nous</h2>
-                <p>Route de la joie , n°69 <br>
-                    1000 - Brussels
-
-
-                </p>
+                <p>Rue du Bonheur , n°69 <br>
+                    1070 - Anderlecht
+          
+          
+                  </p>
                 <p>Tel : 0497 067 226 <br>
                     Email: <a href="mailto:shibuyaramen@gmail.com">Shibuyaramen@gmail.com</a>
 
