--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
 
                         <!-- Form submit button -->
                         <div class="d-grid">
-                            <button class="btn btn-primary btn-lg" type="submit">Submit</button>
+                            <button class="btn btn-primary btn-lg" type="submit"> Submit  <img src="https://zupimages.net/up/21/40/e9w9.png" alt="Avatar Logo" style="width:40px;" class="rounded-pill"></button>
                         </div>
 
                     </form>
@@ -147,14 +147,13 @@
 
 
 
-    <div class="container text-center justify-content-center mt-5  border rounded-3"
-        style="background-color: rgba(241, 236, 236, 0.562);">
+    <div class="container text-center justify-content-center mt-5 mb-5 ">
 
         <div class="row">
 
             <div class="col-sm-4 order-sm-5 mb-1 ">
 
-                <div class="panel panel-default">
+                <div class="card" style="background-color: rgba(241, 236, 236, 0.76);">
                     <h2>Contactez-nous</h2>
                     <p>Rue du Bonheur , n°69 <br>
                         1070 - Anderlecht
@@ -171,7 +170,7 @@
 
 
             <div class="col-sm-4 order-sm-6 mb-0 pb-0">
-                <div class="panel panel-default">
+                <div class="card" style="background-color: rgba(241, 236, 236, 0.76);">
 
                     <h2>Heures d'ouvertures</h2>
                     <p>
@@ -200,13 +199,13 @@
 
             <div class="col-sm-4 order-sm-7">
 
-                <div class="panel panel-default">
+                <div class="card" style="background-color: rgba(241, 236, 236, 0.76);">
                     <h2>Réservation</h2>
                     <p><strong>Par téléphone : </strong> <br>
                         0497 067 226
                     </p>
                     <p><strong>Via notre formulaire:</strong> <br>
-                        <button id="button" href="https://borisbecode.github.io/restaurant/contact.html" class="btn btn-outline-secondary" type="button">Contact</button>
+                        <a class="btn btn-primary" href="https://borisbecode.github.io/restaurant/contact.html" role="button">Formulaire</a>
                     </p>
                 </div>
 
@@ -225,7 +224,7 @@
     <footer>
 
 
-        <div class="container-fluid text-center bg-light">
+        <div id="footer" class="container-fluid text-center bg-light">
 
             2021 Copyright : BiS Becode
 
