--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
 
-    <div class="row">
+    <div class="row mb-5">
 
       <div class="col-sm-4 order-sm-1">
 
@@ -139,7 +139,7 @@
       <div class="container-fluid text-center justify-content-center order-sm-4 mt-5">
 
 
-        <div class="row mt-5">
+        <div class="row mt-5 mb-5">
           <div class="col-sm-6 order-sm-6">
             <div class="card">
               <div id="google" class="card-body p-5">
@@ -168,95 +168,18 @@
 
   </div>
 
-  <footer class="container-fluid text-center justify-content-center mt-5  border rounded-3"
-    style="background-color: rgba(241, 236, 236, 0.562);">
-
-    <div id="foot" class="row mb-1">
-      <div class="col-sm-4 order-sm-5 mb-1">
-
-        <h2>Contactez-nous</h2>
-        <p>Rue du Bonheur , n°69 <br>
-          1070 - Anderlecht
+  <footer>
 
 
-        </p>
-        <p>Tel : 0497 067 226 <br>
-          Email: <a href="mailto:shibuyaramen@gmail.com">Shibuyaramen@gmail.com</a>
+    <div id="footer" class="container-fluid text-center bg-light">
 
-        </p>
-        
-
-
-      </div>
-
-
-
-      <div class="col-sm-4 order-sm-6 mb-0 pb-0">
-
-        <h2>Heures d'ouvertures</h2>
-        <p>
-          <strong>Mardi, Mercredi, jeudi et Vendredi :</strong><br>
-          De 12h00 à 14h00 et de 19h00 à 21h30
-
-        </p>
-        <p>
-          <Strong>Samedi :</Strong> <br>
-          De 11h00 à 15h00 et de 17h00 à 22h30
-
-
-
-
-        </p>
-
-        <p><strong>Lundi et Dimanche :</strong><br>
-          Fermé
-
-        </p>
-
-
-      </div>
-
-
-      <div class="col-sm-4 order-sm-7">
-
-        <h2>Réservation</h2>
-        <p><strong>Par téléphone : </strong> <br>
-          0497 067 226
-        </p>
-        <p><strong>Via notre formulaire:</strong> <br>
-          <button id="button" class="btn btn-outline-secondary" href="https://borisbecode.github.io/restaurant/contact.html" type="button">Contact</button>
-        </p>
-        <!-- <p><strong>Nos Réseaux:</strong></p>
-            <a href="#" class="ico" title="Facebook"><i class="fa fa-facebook"></i></a>
-            <a href="#" class="ico" title="Linkedin"><i class="fa fa-instagram"></i></a> -->
-
-            <p>2021 Copyright : Bisbecode</p>
-
-      </div>
-
-
+        2021 Copyright : BiS Becode
 
 
 
 
     </div>
-
-
-
-
-
-
-
-
-    
-
-
-
-  </footer>
-
-
-
-
+</footer>
 
 
 
