--- a/restaurant.html
+++ b/restaurant.html
@@ -279,92 +279,18 @@
 
 
 
-    <footer class="container-fluid text-center justify-content-center mt-5  border rounded-3"
-        style="background-color: rgba(241, 236, 236, 0.562);">
-
-        <div id="foot" class="row mb-1">
-            <div class="col-sm-4 order-sm-5 mb-1">
-
-                <h2>Contactez-nous</h2>
-                <p>Rue du Bonheur , n°69 <br>
-                    1070 - Anderlecht
-          
-          
-                  </p>
-                <p>Tel : 0497 067 226 <br>
-                    Email: <a href="mailto:shibuyaramen@gmail.com">Shibuyaramen@gmail.com</a>
-
-                </p>
+    <footer>
 
 
+        <div id="footer" class="container-fluid text-center bg-light">
 
-            </div>
-
-
-
-            <div class="col-sm-4 order-sm-6 mb-0 pb-0">
-
-                <h2>Heures d'ouvertures</h2>
-                <p>
-                    <strong>Mardi, Mercredi, jeudi et Vendredi :</strong><br>
-                    De 12h00 à 14h00 et de 19h00 à 21h30
-
-                </p>
-                <p>
-                    <Strong>Samedi :</Strong> <br>
-                    De 11h00 à 15h00 et de 17h00 à 22h30
-
-
-
-
-                </p>
-
-                <p><strong>Lundi et Dimanche :</strong><br>
-                    Fermé
-
-                </p>
-
-
-            </div>
-
-
-            <div class="col-sm-4 order-sm-7">
-
-                <h2>Réservation</h2>
-                <p><strong>Par téléphone : </strong> <br>
-                    0497 067 226
-                </p>
-                <p><strong>Via notre formulaire:</strong> <br>
-                    <button id="button" class="btn btn-outline-secondary" type="button">Contact</button>
-                </p>
-
-
-                <p>2021 Copyright : Bisbecode</p>
-
-            </div>
-
-
+            2021 Copyright : BiS Becode
 
 
 
 
         </div>
-
-
-
-
-
-
-
-
-
-
-
-
     </footer>
-
-
-
 
 
 
