--- a/contact.html
+++ b/contact.html
@@ -153,7 +153,7 @@
 
             <div class="col-sm-4 order-sm-5 mb-1 ">
 
-                <div class="card" style="background-color: rgba(241, 236, 236, 0.76);">
+                <div id="contactez" class="card" style="background-color: rgba(241, 236, 236, 0.76);">
                     <h2>Contactez-nous</h2>
                     <p>Rue du Bonheur , n°69 <br>
                         1070 - Anderlecht
@@ -199,7 +199,7 @@
 
             <div class="col-sm-4 order-sm-7">
 
-                <div class="card" style="background-color: rgba(241, 236, 236, 0.76);">
+                <div id="reservation"   class="card" style="background-color: rgba(241, 236, 236, 0.76);">
                     <h2>Réservation</h2>
                     <p><strong>Par téléphone : </strong> <br>
                         0497 067 226
