--- a/menu.html
+++ b/menu.html
@@ -70,7 +70,7 @@
             <h1> Shoyu Ramen
 
             </h1>
-            <ol class="list-group list-group-numbered ">
+            <ul class="list-group list-group-numbered ">
 
                 <li class="list-group-item d-flex justify-content-between align-items-start">
                     <div class="ms-2 me-auto">
@@ -78,6 +78,7 @@
                         <img src="https://zupimages.net/up/21/40/6jre.jpg" alt=""> Soupe aux nouilles aromatisée à la
                         sauce soja avec legumes ,bambou et tofu grillé
                     </div>
+                    <span id="badge" class="badge rounded-pill bg-success ml-4 mt-1">Végétarien</span>
                     <span id="prix" class="badge bg-primary rounded-pill">15€</span>
                 </li>
 
@@ -87,6 +88,7 @@
                         <img src="https://zupimages.net/up/21/40/p4cu.jpg" alt="">
                         Soupe aux nouilles aromatisée à la sauce soja avec legumes et scampi
                     </div>
+                    <span id="badge" class="badge rounded-pill bg-success ml-4 mt-1">Végétarien</span>
                     <span id="prix" class="badge bg-primary rounded-pill">14€</span>
                 </li>
 
@@ -106,7 +108,7 @@
                     </div>
                     <span id="prix" class="badge bg-primary rounded-pill">16€</span>
                 </li>
-            </ol>
+            </ul>
 
 
         </div>
@@ -129,6 +131,7 @@
                         <img src="https://zupimages.net/up/21/40/awg4.jpg" alt=""> Soupe aux nouilles aromatisée au Miso
                         avec legumes , bambou et lard croustillant
                     </div>
+                    <span id="badge" class="badge rounded-pill bg-info ml-4 mt-1">Nouveau</span>
                     <span id="prix" class="badge bg-primary rounded-pill">17€</span>
                 </li>
 
@@ -155,6 +158,7 @@
                         <img src="https://zupimages.net/up/21/40/nilk.jpg" alt="">
                         Soupe aux nouilles aromatisée au Miso avec legumes , bambou et tofu pané
                     </div>
+                    <span id="badge" class="badge rounded-pill bg-success ml-4 mt-1">Végétarien</span>
                     <span id="prix" class="badge bg-primary rounded-pill">16€</span>
                 </li>
             </ol>
@@ -193,6 +197,7 @@
                         <img src="https://zupimages.net/up/21/40/23du.jpg" alt="">
                         Guyoza maison , assaisonnement de la maison , vegetarien . 6 pieces.
                     </div>
+                    <span id="badge" class="badge rounded-pill bg-success ml-4 mt-1">Végétarien</span>
                     <span id="prix" class="badge bg-primary rounded-pill">7€</span>
                 </li>
 
