--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
 
-  <nav id="navbar" class="navbar navbar-expand-md navbar-dark " style="background-color: rgba(128, 128, 128, 0.384);">
+  <nav id="navbar" class="navbar navbar-expand-md navbar-dark " style=" background-color: rgba(8, 8, 8, 0.822);" >
     <div class="container-fluid">
 
       <a id="logo" class="navbar-brand expand-sm" href="https://borisbecode.github.io/restaurant/">
@@ -192,7 +192,7 @@
 
     <div id="footer" class="container-fluid text-center ">
       
-      <p>2021 Copyright : BiS Becode </p> <p>Credit Pictures Website Unsplash</p>
+    2021 Copyright : BiS Becode 
 
 
 
