--- a/restaurant.html
+++ b/restaurant.html
@@ -53,7 +53,7 @@
 
     </nav>
 
-    <div id="titre" class="container-fluid text-center mb-5" style="background-color: rgba(128, 128, 128, 0.384);">
+    <div id="titre" class="container-fluid text-center mb-5">
 
         <h1>Restaurant Shibuya</h1>
         <h2>Spécialiste du Ramen</h2>
