--- a/pagination.html
+++ b/pagination.html
@@ -53,7 +53,7 @@
     
       </nav>
 
-    <div id="titre" class="container-fluid text-center mb-5" style="background-color: rgba(128, 128, 128, 0.384);">
+    <div id="titre" class="container-fluid text-center mb-5">
 
         <h1>Restaurant Shibuya</h1>
         <h2>Spécialiste du Ramen</h2>
@@ -62,7 +62,7 @@
 
     </div>
 
-    <div id="soustitre" class="container-fluid text-center " style="background-color: rgba(44, 44, 44, 0.733);">
+    <div id="soustitre" class="container-fluid text-center " style="background-color: rgba(8, 8, 8, 0.822); ">
 
         <h1>Découvrez nous...</h1>
         <h2>En image:</h2>
