--- a/pagination3.html
+++ b/pagination3.html
@@ -131,7 +131,7 @@
 
                         
                         <li  class="page-item active">
-                            <a class="page-link" href="https://borisbecode.github.io/restaurant/pagination3.html">3 <span class="sr-only">Active Page</span></a></li>
+                            <a id="active" class="page-link" href="https://borisbecode.github.io/restaurant/pagination3.html">3 <span class="sr-only">Active Page</span></a></li>
                         <li  class="page-item"><a class="page-link" href="https://borisbecode.github.io/restaurant/pagination4.html">4</a></li>
 
 
