--- a/pagination2.html
+++ b/pagination2.html
@@ -130,7 +130,7 @@
                         <li class="page-item"><a class="page-link" href="https://borisbecode.github.io/restaurant/pagination.html">1</a></li>
 
                         <li class="page-item active">
-                            <a class="page-link" href="https://borisbecode.github.io/restaurant/pagination2.html">2 <span class="sr-only">Active Page</span></a></li>
+                            <a id="active"   class="page-link " href="https://borisbecode.github.io/restaurant/pagination2.html">2 <span class="sr-only">Active Page</span></a></li>
 
                         
 
