--- a/pagination4.html
+++ b/pagination4.html
@@ -142,7 +142,7 @@
 
 
                             <li class="page-item active">
-                                <a class="page-link" href="https://borisbecode.github.io/restaurant/pagination4.html">4 <span class="sr-only">Active Page</span></a></li>
+                                <a id="active" class="page-link" href="https://borisbecode.github.io/restaurant/pagination4.html">4 <span class="sr-only">Active Page</span></a></li>
 
 
                         <li class="page-item">
