--- a/menu.html
+++ b/menu.html
@@ -207,7 +207,7 @@
 
         </div>
     </div>
-    <div class="container mt-5 order-sm-4">
+    <div class="container mt-5 order-sm-4 mb-5">
         <div class="row bg-light pb-3 border rounded-3">
             <h1> Boisson
 
