--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <title>Home</title>
+  <link rel="icon" type="image/png" sizes="16x16" href="https://zupimages.net/up/21/40/e9w9.png">
+
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -29,7 +31,7 @@
       </a>
 
 
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      <button class="navbar-toggler bg-danger" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -150,7 +152,7 @@
           <h2>Venez découvrir l'authenticité :</h2>
 
 
-          <a class="btn btn-primary btn-lg mt-5" href="https://borisbecode.github.io/restaurant/pagination.html"
+          <a class="btn btn-danger btn-lg mt-5" href="https://borisbecode.github.io/restaurant/pagination.html"
             role="button">Photo de nos plats </a>
         </div>
       </div>
@@ -160,18 +162,18 @@
 
         <div class="row mt-5 mb-5">
           <div class="col-sm-6 order-sm-6">
-            <div class="card">
+            <div class="card" style="background-color: rgba(255, 255, 255, 0.705);">
               <div id="google" class="card-body p-5">
 
-                <a href="#" class="btn btn-primary">Avis Google</a>
+                <a href="#" class="btn btn-danger">Avis Google</a>
               </div>
             </div>
           </div>
           <div class="col-sm-6 order-sm-7">
-            <div class="card">
+            <div class="card " style="background-color: rgba(255, 255, 255, 0.705);">
               <div id="trip" class="card-body p-5">
 
-                <a href="#" class="btn btn-primary">Avis Tripadvisor</a>
+                <a href="#" class="btn btn-danger">Avis Tripadvisor</a>
               </div>
             </div>
           </div>
