--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Menu</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="https://zupimages.net/up/21/40/e9w9.png">
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -25,12 +26,12 @@
         <div class="container-fluid">
 
             <a id="logo" class="navbar-brand expand-sm" href="https://borisbecode.github.io/restaurant/">
-                <img src="https://zupimages.net/up/21/40/e9w9.png" alt="Avatar Logo" style="width:40px;"
+                <img id="avatar" src="https://zupimages.net/up/21/40/e9w9.png" alt="Avatar Logo" style="width:40px;"
                     class="rounded-pill">
             </a>
 
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            <button class="navbar-toggler bg-danger" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
