--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,7 @@
 
                         <!-- Form submit button -->
                         <div class="d-grid">
-                            <button class="btn btn-primary btn-lg" type="submit"> Submit  <img src="https://zupimages.net/up/21/40/e9w9.png" alt="Avatar Logo" style="width:40px;" class="rounded-pill"></button>
+                            <button class="btn btn-danger btn-lg " type="submit"> <span>Submit</span>  <img src="https://zupimages.net/up/21/40/e9w9.png" alt="Avatar Logo" style="width:40px;" class="rounded-pill"></button>
                         </div>
 
                     </form>
@@ -215,7 +215,7 @@
                         0497 067 226
                     </p>
                     <p><strong>Via notre formulaire:</strong> <br>
-                        <a class="btn btn-primary mt-3" href="https://borisbecode.github.io/restaurant/contact.html" role="button">Formulaire</a>
+                        <a class="btn btn-danger mt-3" href="https://borisbecode.github.io/restaurant/contact.html" role="button">Formulaire</a>
                     </p>
                 </div>
 
