--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="container-fluid">
 
       <a id="logo" class="navbar-brand expand-sm" href="https://borisbecode.github.io/restaurant/">
-        <img src="https://zupimages.net/up/21/40/e9w9.png" alt="Avatar Logo" style="width:40px;" class="rounded-pill">
+        <img src="https://zupimages.net/up/21/40/e9w9.png" alt="logo restaurant shibuya" style="width:40px;" class="rounded-pill">
       </a>
 
 
